logs/mobility/build.make.063.log.stderr
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:66:1: error: ‘Posd2D’ in namespace ‘geometry_msgs’ does not name a type
 geometry_msgs::Posd2D startingLocation;//steven variable, used for calculating distance travelled in linear travel objectives
 ^
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void setDestination(float, float)’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:309:1: error: ‘startingLocation’ was not declared in this scope
 startingLocation.x = currentLocation.x;
 ^
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘bool travelledFarEnough()’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:524:58: error: ‘startingLocation’ was not declared in this scope
 float distanceFromStartToFinish = hypot(goalLocation.x - startingLocation.x, goalLocation.y - startingLocation.y);
                                                          ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
